set02/problem07_compile_errors.txt
Compilation started at 11/7/2023, 4:30:27 PM
Compilation finished at 11/7/2023, 4:30:31 PM
Compilation started at 11/7/2023, 4:32:17 PM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem07.c: In function 'main':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem07.c:15:5: warning: implicit declaration of function 'print' [-Wimplicit-function-declaration]
     print("%f %f",tri.base,tri.altitude);
     ^~~~~
C:\Users\zaina\AppData\Local\Temp\cc3jq6nM.o: In function `main':
c:/Users/zaina/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz/set02/problem07.c:15: undefined reference to `print'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 11/7/2023, 4:32:21 PM
Compilation started at 11/7/2023, 4:32:27 PM
Compilation finished at 11/7/2023, 4:32:31 PM
Compilation started at 11/7/2023, 4:33:05 PM
Compilation finished at 11/7/2023, 4:33:09 PM
Compilation started at 11/7/2023, 4:39:00 PM
Compilation finished at 11/7/2023, 4:39:04 PM
Compilation started at 11/7/2023, 4:43:20 PM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem07.c: In function 'main':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem07.c:17:15: error: incompatible type for argument 1 of 'find_area'
     find_area(tri);
               ^~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem07.c:10:6: note: expected 'Triangle * {aka struct _triangle *}' but argument is of type 'Triangle {aka struct _triangle}'
 void find_area(Triangle *t);
      ^~~~~~~~~
Compilation finished at 11/7/2023, 4:43:22 PM
Compilation started at 11/7/2023, 4:44:23 PM
Compilation finished at 11/7/2023, 4:44:26 PM
Compilation started at 11/7/2023, 4:47:28 PM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem07.c: In function 'find_area':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem07.c:35:12: warning: 'return' with a value, in function returning void
     return t;
            ^
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem07.c:32:6: note: declared here
 void find_area(Triangle t)
      ^~~~~~~~~
Compilation finished at 11/7/2023, 4:47:32 PM
